feat: implement health check and service, fix biome excludes

--- a/biome.json
+++ b/biome.json
@@ -106,7 +106,8 @@
         }
     },
     "files": {
-        "ignoreUnknown": false
+        "ignoreUnknown": false,
+        "includes": ["!dist"]
     },
     "javascript": {
         "parser": {
