--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "some-nestjs-template",
-    "version": "0.0.1",
+    "name": "some-nestjs-template-biome",
+    "version": "0.0.0",
     "description": "",
-    "author": "",
+    "license": "",
     "private": true,
-    "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
         "format": "biome format --write .",
@@ -33,8 +32,6 @@
     },
     "devDependencies": {
         "@biomejs/biome": "^2.0.0-beta.1",
-        "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.18.0",
         "@nestjs/cli": "^11.0.0",
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.0.1",
@@ -45,19 +42,9 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.2",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-perfectionist": "^4.10.1",
-        "eslint-plugin-prettier": "^5.2.2",
-        "globals": "^16.0.0",
         "jest": "^29.7.0",
-        "prettier": "^3.4.2",
-        "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
-        "ts-loader": "^9.5.2",
-        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.7.3",
-        "typescript-eslint": "^8.20.0"
+        "typescript": "^5.7.3"
     }
 }
