--- a/biome.json
+++ b/biome.json
@@ -107,7 +107,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["!dist"]
+        "includes": ["**", "!dist", "!node_modules"]
     },
     "javascript": {
         "parser": {
